Implementada a solução SSL/TLS Scanner
